--- a/_questions/visualizations/visualization04.html
+++ b/_questions/visualizations/visualization04.html
@@ -833,19 +833,32 @@
           <text class="visfirst5" transform="translate(2082.12 2843.69)">NREL.GOV<tspan x="35.96" y="43.22">37,292</tspan></text>
           <text class="visfirst5" transform="translate(2097.77 2843.69)">LBL.GOV<tspan x="20.31" y="43.22">29,373</tspan></text>
           <text class="visfirst5" transform="translate(2057.94 2843.69)">ENERG<tspan class="visfirst11" x="122.7" y="0">Y</tspan><tspan x="139.73" y="0">.GOV</tspan><tspan x="60.14" y="43.22">15,097</tspan></text>
+          <text class="visfirst5" transform="translate(2057.94 2843.69)">ENERG<tspan class="visfirst11" x="122.7" y="0">Y</tspan><tspan x="139.73" y="0">.GOV</tspan><tspan x="60.14" y="43.22">15,097</tspan></text>
           <text class="visfirst5" transform="translate(1498.46 2843.69)">SCIENCEDIREC<tspan class="visfirst8" x="259.48" y="0">T</tspan><tspan x="276.15" y="0">.COM</tspan><tspan x="157.02" y="43.22">226</tspan></text>
           <text class="visfirst5" transform="translate(1602.5 2843.69)">IEEE.ORG<tspan x="52.98" y="43.22">715</tspan></text>
           <text class="visfirst5" transform="translate(1591.19 2843.69)">MDPI.COM<tspan x="49.27" y="43.22">3,678</tspan></text>
           <text class="visfirst5" transform="translate(1569.8 2843.69)">ASHRAE.ORG<tspan x="110.02" y="43.22">-</tspan></text>
           <text class="visfirst5" transform="translate(1581.48 316.44)">BAIDU.COM<tspan x="94.01" y="43.22">4</tspan></text>
+          <text class="visfirst5" transform="translate(1581.48 316.44)">BAIDU.COM<tspan x="94.01" y="43.22">4</tspan></text>
+          <text class="visfirst5" transform="translate(1581.48 316.44)">BAIDU.COM<tspan x="94.01" y="43.22">4</tspan></text>
+          <text class="visfirst5" transform="translate(1581.48 316.44)">BAIDU.COM<tspan x="94.01" y="43.22">4</tspan></text>
           <text class="visfirst5" transform="translate(970.84 2843.69)">INFORM<tspan class="visfirst7" x="143.94" y="0">A</tspan><tspan x="165.98" y="0">TIONWEEK.COM</tspan><tspan x="172.56" y="43.22">77,351</tspan></text>
+          <text class="visfirst5" transform="translate(916.41 2840.62)">D<tspan class="visfirst7" x="26.69" y="0">AT</tspan><tspan x="66.08" y="0">ACENTERKNOWLEDGE.COM</tspan><tspan x="226.99" y="43.22">85,215</tspan></text>
+          <text class="visfirst5" transform="translate(916.41 2840.62)">D<tspan class="visfirst7" x="26.69" y="0">AT</tspan><tspan x="66.08" y="0">ACENTERKNOWLEDGE.COM</tspan><tspan x="226.99" y="43.22">85,215</tspan></text>
+          <text class="visfirst5" transform="translate(938.03 2840.62)">D<tspan class="visfirst7" x="26.69" y="0">AT</tspan><tspan x="66.08" y="0">ACENTERDYNAMICS.COM</tspan><tspan x="195.35" y="43.22">188,382</tspan></text>
           <text class="visfirst5" transform="translate(949.72 2840.62)">D<tspan class="visfirst7" x="26.69" y="0">AT</tspan><tspan x="66.08" y="0">ACENTERJOURNAL.COM</tspan><tspan x="183.67" y="43.22">389,956</tspan></text>
           <text class="visfirst5" transform="translate(1055.4 313.67)">JI<tspan class="visfirst6" x="27.37" y="0">F</tspan><tspan x="46.06" y="0">ANG360.COM</tspan><tspan x="88" y="43.22">29,968</tspan></text>
+          <text class="visfirst5" transform="translate(1055.4 313.67)">JI<tspan class="visfirst6" x="27.37" y="0">F</tspan><tspan x="46.06" y="0">ANG360.COM</tspan><tspan x="88" y="43.22">29,968</tspan></text>
+          <text class="visfirst5" transform="translate(1055.4 313.67)">JI<tspan class="visfirst6" x="27.37" y="0">F</tspan><tspan x="46.06" y="0">ANG360.COM</tspan><tspan x="88" y="43.22">29,968</tspan></text>
           <text class="visfirst5" transform="translate(1063.79 313.67)">IDCQUAN.COM<tspan x="79.61" y="43.22">46,193</tspan></text>
+          <text class="visfirst5" transform="translate(1063.79 313.67)">IDCQUAN.COM<tspan x="79.61" y="43.22">46,193</tspan></text>
+          <text class="visfirst5" transform="translate(1063.79 313.67)">IDCQUAN.COM<tspan x="79.61" y="43.22">46,193</tspan></text>
+          <text class="visfirst5" transform="translate(1063.79 316.44)">IDCQUAN.COM<tspan x="79.61" y="43.22">46,193</tspan></text>
           <text class="visfirst5" transform="translate(585.75 2843.69)">CSEMAG.COM<tspan x="60.59" y="43.22">343,288</tspan></text>
           <text class="visfirst5" transform="translate(549.38 2843.69)">TECH<tspan class="visfirst7" x="94.71" y="0">T</tspan><tspan x="112.07" y="0">ARGE</tspan><tspan class="visfirst8" x="209.45" y="0">T</tspan><tspan x="226.13" y="0">.COM</tspan><tspan x="116.99" y="43.22">1,808</tspan></text>
           <text class="visfirst5" transform="translate(574.37 2843.69)">IDEALPDU.COM<tspan x="131.36" y="43.22">-</tspan></text>
           <text class="visfirst5" transform="translate(642.7 2843.7)">TELIA.FI<tspan x="13.65" y="43.22">26,162</tspan></text>
+          <text class="visfirst5" transform="translate(590.84 316.44)">HU<tspan class="visfirst12" x="52.04" y="0">A</tspan><tspan x="76.53" y="0">WEI.COM</tspan><tspan x="90.54" y="43.22">687</tspan></text>
           <text class="visfirst5" transform="translate(590.84 316.44)">HU<tspan class="visfirst12" x="52.04" y="0">A</tspan><tspan x="76.53" y="0">WEI.COM</tspan><tspan x="90.54" y="43.22">687</tspan></text>
           <text class="visfirst5" transform="translate(594.39 316.44)">H3C.COM.CN<tspan x="56.95" y="43.22">142517</tspan></text>
           <text class="visfirst5" transform="translate(637.43 316.44)">GE.COM<tspan x="18.92" y="43.22">12,217</tspan></text>
