--- a/_questions/visualizations/visualization06.html
+++ b/_questions/visualizations/visualization06.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html style="height: 100%">
 
@@ -8,6 +10,11 @@
 </head>
 
 <body style="height: 100%; margin: 0">
+  <!-- Add the HTML code for your visualization here -->
+  <div id = "youtubeImg01">
+    <img src="{{ '/assets/images/covers/vis0601.svg' | relative_url }}" alt="Visualization of research question">
+  </div>
+
   <div id="container" style="height: 100%"></div>
   <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
   <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts-gl/echarts-gl.min.js"></script>
