--- a/_questions/visualizations/visualization04.html
+++ b/_questions/visualizations/visualization04.html
@@ -552,6 +552,58 @@
               stroke-width: 0.69px;
             }
           </style>
+            <g id="visfrect">
+              <rect id="rectfirst" class="visfirst4" x="4487.85" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="4000.83" y="1250.79" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="3512.76" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="3025.65" y="1951.51" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="3025.65" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2538.63" y="2011.48" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2538.63" y="1951.51" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2538.63" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2538.63" y="1250.79" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2050.88" y="2131.43" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2050.88" y="2071.46" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2050.88" y="2011.48" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2050.88" y="1951.51" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="2050.88" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="2071.46" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="2011.48" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="1951.51" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="1250.79" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="1190.81" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="1130.84" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1563.22" y="1070.86" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="2132.48" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="2071.46" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="2011.48" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="1951.51" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="1250.79" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="1190.81" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="1130.84" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="1070.86" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="1010.89" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="950.91" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="890.94" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="830.96" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="1076.23" y="770.99" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="2071.46" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="2011.48" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="1951.51" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="1891.53" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="1250.79" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="1190.81" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="1130.84" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="1070.86" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="1010.89" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="950.91" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="890.94" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="830.96" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="770.99" width="241.93" height="25.56" />
+              <rect id="rectfirst" data-name="rect" class="visfirst4" x="589.19" y="711.06" width="241.93" height="25.56" />
+            </g>
           <clipPath id="clip-path" transform="translate(439.58 -239.79)">
             <circle id="SVGID" class="visfirst1" cx="2220.02" cy="638.35" r="95.89"/>
           </clipPath>
