--- a/_questions/visualizations/visualization02.html
+++ b/_questions/visualizations/visualization02.html
@@ -23,7 +23,9 @@
         .cls-103, .cls-109, .cls-4, .cls-80, .cls-84 {
           stroke-width: 1.13px;
         }
-  
+          .textBold{
+            stroke-width: 10px !important;
+          }
         .cls-4 {
           stroke-dasharray: 11.14 22.29;
         }
@@ -735,15 +737,7 @@
       </clipPath>
     </defs>
     <title>002</title>
-    <g id="rectsecond">
-      <rect id="_1" data-name="1" class="cls-3" x="2351.56" y="1268.93" width="420.21" height="8763.67"/>
-      <rect id="_2" data-name="2" class="cls-3" x="2875.58" y="1268.93" width="583.3" height="8763.67"/>
-      <rect id="_3" data-name="3" class="cls-3" x="3481.15" y="1268.93" width="583.3" height="8763.67"/>
-      <rect id="_4" data-name="4" class="cls-3" x="4179.6" y="1268.93" width="397.54" height="8763.67"/>
-      <rect id="_5" data-name="5" class="cls-3" x="4748.51" y="1268.93" width="470.84" height="8763.67"/>
-      <rect id="_6" data-name="6" class="cls-3" x="5403.29" y="1268.93" width="372.41" height="8763.67"/>
-      <rect id="_7" data-name="7" class="cls-3" x="6062.47" y="1268.93" width="265.18" height="8763.67"/>
-    </g>
+
     <g id="linesecond">
       <rect class="cls-3" x="655.29" width="7284.91" height="11337.95"/>
       <g>
@@ -3459,6 +3453,16 @@
           <text class="cls-75" transform="translate(3137.86 3061.63)">33</text>
         </g>
       </g>
+              <g>
+                <rect id="rectsecond" data-name="1" class="cls-3" x="2351.56" y="1268.93" width="420.21" height="8763.67" />
+                <rect id="rectsecond" data-name="2" class="cls-3" x="2875.58" y="1268.93" width="583.3" height="8763.67" />
+                <rect id="rectsecond" data-name="3" class="cls-3" x="3481.15" y="1268.93" width="583.3" height="8763.67" />
+                <rect id="rectsecond" data-name="4" class="cls-3" x="4179.6" y="1268.93" width="397.54" height="8763.67" />
+                <rect id="rectsecond" data-name="5" class="cls-3" x="4748.51" y="1268.93" width="470.84" height="8763.67" />
+                <rect id="rectsecond" data-name="6" class="cls-3" x="5403.29" y="1268.93" width="372.41" height="8763.67" />
+                <rect id="rectsecond" data-name="7" class="cls-3" x="6062.47" y="1268.93" width="265.18" height="8763.67" />
+              </g>
     </g>
+
   </svg>
  
