--- a/_questions/visualizations/visualization02.html
+++ b/_questions/visualizations/visualization02.html
@@ -23,9 +23,9 @@
         .cls-103, .cls-109, .cls-4, .cls-80, .cls-84 {
           stroke-width: 1.13px;
         }
-          .textBold{
-            stroke-width: 10px !important;
-          }
+      .textBold{
+        fill: red !important;
+      }
         .cls-4 {
           stroke-dasharray: 11.14 22.29;
         }
@@ -3453,7 +3453,9 @@
           <text class="cls-75" transform="translate(3137.86 3061.63)">33</text>
         </g>
       </g>
-              <g>
+
+    </g>
+              <g style="opacity:0">
                 <rect id="rectsecond" data-name="1" class="cls-3" x="2351.56" y="1268.93" width="420.21" height="8763.67" />
                 <rect id="rectsecond" data-name="2" class="cls-3" x="2875.58" y="1268.93" width="583.3" height="8763.67" />
                 <rect id="rectsecond" data-name="3" class="cls-3" x="3481.15" y="1268.93" width="583.3" height="8763.67" />
@@ -3462,7 +3464,5 @@
                 <rect id="rectsecond" data-name="6" class="cls-3" x="5403.29" y="1268.93" width="372.41" height="8763.67" />
                 <rect id="rectsecond" data-name="7" class="cls-3" x="6062.47" y="1268.93" width="265.18" height="8763.67" />
               </g>
-    </g>
-
   </svg>
  
