--- a/_questions/visualizations/visualization04.html
+++ b/_questions/visualizations/visualization04.html
@@ -435,6 +435,13 @@
       .cls-103 {
         stroke-width: 4.6px;
       }
+      .event-hide{
+        visibility: hidden;
+      }
+
+      .event-show{
+        visibility: visible !important;
+      }
     </style>
     <linearGradient id="未命名的渐变_18" data-name="未命名的渐变 18" x1="6215.86" y1="4542.74" x2="7084.15" y2="4542.74" gradientUnits="userSpaceOnUse">
       <stop offset="0" stop-color="#fff"/>
@@ -677,100 +684,100 @@
     </g>
   </g>
   <g id="eventtext">
-    <g id="T0507_EVENT" data-name="T0507 EVENT">
+    <g id="event" class="event-hide" data-name="T0507 EVENT">
       <text class="cls-98" transform="translate(1752.51 1292.01)">The Energy Policy Act of 2005 (Pub.L. 109–58) is a bill passed by <tspan x="0" y="87.18">the United States Congress and signed into law.The act is an </tspan><tspan x="0" y="174.36">attampt to combat growing energy problems changed US energy</tspan><tspan x="0" y="261.53">policy by providing tax incentives and loan guarantees for energy </tspan><tspan x="0" y="348.71">production of various types</tspan><tspan class="cls-99"><tspan x="0" y="523.07">https://www.gpo.gov/fdsys/pkg/PLAW-109publ58/html/PLAW-109</tspan><tspan x="2126.94" y="523.07">-</tspan><tspan x="0" y="610.24">publ58.htm</tspan></tspan></text>
       <text class="cls-100" transform="translate(1752.51 1150.54)"><tspan xml:space="preserve">The Energy Policy Act of 2005    2005.07.29</tspan></text>
       <circle class="cls-88" cx="1647.18" cy="1121.65" r="20.3"/>
     </g>
-    <g id="T0602_EVENT" data-name="T0602 EVENT">
+    <g id="event" class="event-hide" data-name="T0602 EVENT">
       <text class="cls-98" transform="translate(2119.06 1825.6)">The Public Utility Holding Company Act of 1935 was repealed, ef<tspan x="2165.05" y="0">-</tspan><tspan x="0" y="87.18">fective on February 2006, by the passing of The Energy Policy Act </tspan><tspan x="0" y="174.36">of 2005 (Pub.L. 109–58)</tspan><tspan class="cls-99"><tspan x="0" y="348.71">https://en.wikipedia.org/wiki/Public_Utility_Holding_Compa</tspan><tspan x="1908.37" y="348.71">-</tspan><tspan x="0" y="435.89">ny_Act_of_1935</tspan></tspan></text>
       <text class="cls-100" transform="translate(2114.64 1660.87)"><tspan xml:space="preserve">The passing of The Energy Policy Act of 2005    2006.02</tspan></text>
       <circle class="cls-88" cx="2022.41" cy="1633.59" r="20.3"/>
     </g>
-    <g id="T0605_EVENT" data-name="T0605 EVENT">
+    <g id="event" class="event-hide" data-name="T0605 EVENT">
       <text class="cls-98" transform="translate(2115.92 1880.67)">White Paper - Cisco Energy Efficient Data Center Solutions and Best Practices<tspan class="cls-99"><tspan x="0" y="174.36">https://www.cisco.com/c/dam/en_us/solutions/indus</tspan><tspan x="1675.11" y="174.36">-</tspan><tspan x="0" y="261.53">tries/docs/gov/EnergyEfficientDC_WP.pdf</tspan></tspan></text>
       <text class="cls-100" transform="translate(2115.92 1730.45)"><tspan xml:space="preserve">White Paper - Cisco    2006.05</tspan></text>
       <circle class="cls-88" cx="2022.41" cy="1699.6" r="20.3"/>
     </g>
-    <g id="T0610_EVENT" data-name="T0610 EVENT">
+    <g id="event" class="event-hide" data-name="T0610 EVENT">
       <text class="cls-98" transform="translate(2119.32 1831.41)">The Energy Star program was established by the US EPA and oper<tspan x="2207.61" y="0">-</tspan><tspan x="0" y="87.18">ates under the authority of the Clean Air Act, section 103(g), and </tspan><tspan x="0" y="174.36">the 2005 Energy Policy Actsection 131. The Energy Star program </tspan><tspan x="0" y="261.53">was revised to include stricter efficiency requirements for compu</tspan><tspan x="2176.61" y="261.53">-</tspan><tspan x="0" y="348.71">er equipment</tspan><tspan class="cls-99"><tspan x="0" y="523.07">https://en.wikipedia.org/wiki/Energy_Star</tspan></tspan></text>
       <circle class="cls-88" cx="2022.41" cy="1633.59" r="20.3"/>
       <text class="cls-100" transform="translate(2119.32 1665.33)"><tspan xml:space="preserve">The Energy Star program   2006.10</tspan></text>
     </g>
-    <g id="T0612_EVENT" data-name="T0612 EVENT">
+    <g id="event" class="event-hide" data-name="T0612 EVENT">
       <text class="cls-98" transform="translate(2114.64 1871.26)">The energy used by the nation&apos;s servers and data centers con<tspan x="2039.08" y="0">-</tspan><tspan x="0" y="87.18">sumed about 61 billion kilowatt-hours (kWh) in 2006 (1.5 percent </tspan><tspan x="0" y="174.36">of total U.S. electricity consumption) According to the U.S. EPA </tspan><tspan x="0" y="261.53">Report to Congress on Server and Data Center Energy Efficiency</tspan><tspan class="cls-99"><tspan x="0" y="435.89">https://www.datacenterdynamics.com/news/epa-report-to-con</tspan><tspan x="1980.37" y="435.89">-</tspan><tspan x="0" y="523.07">gress-on-server-and-data-center-energy-efficiency/</tspan></tspan></text>
       <text class="cls-100" transform="translate(2114.64 1724.88)"><tspan xml:space="preserve">The U.S. EPA Report to Congress    2006.12</tspan></text>
       <circle class="cls-88" cx="2022.41" cy="1699.07" r="20.3"/>
     </g>
-    <g id="T0702_EVENT" data-name="T0702 EVENT">
+    <g id="event" class="event-hide" data-name="T0702 EVENT">
       <text class="cls-98" transform="translate(2376.48 1805.51)">The Green Grid is a global consortium dedicated to advancing <tspan x="0" y="87.18">energy efficiency in data centers and business computing ecosy</tspan><tspan x="2155.59" y="87.18">-</tspan><tspan x="0" y="174.36">tems. It was founded by several key companies</tspan><tspan class="cls-99"><tspan x="0" y="348.71">https://en.wikipedia.org/wiki/The_Green_Grid</tspan></tspan></text>
       <text class="cls-100" transform="translate(2376.12 1659.62)"><tspan xml:space="preserve">The Green Grid   2007.02</tspan></text>
       <circle class="cls-88" cx="2283.89" cy="1633.65" r="20.3"/>
     </g>
-    <g id="T0706_EVENT" data-name="T0706 EVENT">
+    <g id="event" class="event-hide" data-name="T0706 EVENT">
       <text class="cls-98" transform="translate(2376.13 1811.92)"><tspan xml:space="preserve">Climate Savers Computing Initiative (CSCI) is a nonprofit  organizations </tspan><tspan x="0" y="87.18">dedicated to promoting smart technologies that improve power efficiency </tspan><tspan x="0" y="174.36">and reduce energy consumption of computers</tspan><tspan class="cls-99"><tspan x="0" y="348.71">https://en.wikipedia.org/wiki/Climate_Savers_Computing_Initiative</tspan></tspan></text>
       <text class="cls-100" transform="translate(2376.13 1656.49)"><tspan xml:space="preserve">Climate Savers Computing Initiative (CSCI)    2007.06</tspan></text>
       <circle class="cls-88" cx="2283.9" cy="1626.29" r="20.3"/>
     </g>
-    <g id="T0708_EVENT" data-name="T0708 EVENT">
+    <g id="event" class="event-hide" data-name="T0708 EVENT">
       <text class="cls-98" transform="translate(2371.09 1910.03)">U.S. Environmental Protection Agency ENERGY STAR Program<tspan class="cls-99"><tspan x="0" y="174.36">https://www.energystar.gov/ia/partners/prod_development/down</tspan><tspan x="2089.84" y="174.36">-</tspan><tspan x="0" y="261.53">loads/EPA_Report_Exec_Summary_Final.pdf </tspan></tspan></text>
       <text class="cls-100" transform="translate(2375.27 1659.62)">Report to Congress on Server and Data Center Energy Ef<tspan x="2410.5" y="0">-</tspan><tspan x="0" y="99.63" xml:space="preserve">ficiency Public Law 109-431   2007.08.02</tspan></text>
       <circle class="cls-88" cx="2283.05" cy="1636.03" r="20.3"/>
     </g>
-    <g id="T0712EVENT">
+    <g id="event" class="event-hide">
       <text class="cls-98" transform="translate(2380.19 1813.84)">Data center energy efficiency and productivity<tspan class="cls-99"><tspan x="0" y="174.36">http://large.stanford.edu/courses/2017/ph240/yu2/docs/brill.pdf</tspan></tspan></text>
       <text class="cls-100" transform="translate(2380.19 1659.62)"><tspan xml:space="preserve">White paper of the uptime institute    2007.12</tspan></text>
       <circle class="cls-88" cx="2287.96" cy="1631.6" r="20.3"/>
     </g>
-    <g id="T0804_EVENT" data-name="T0804 EVENT">
+    <g id="event" class="event-hide" data-name="T0804 EVENT">
       <text class="cls-98" transform="translate(2667.59 1808.15)">“Energy Logic: Reducing DataCenter Energy Consumption by Creating <tspan x="0" y="87.18">Savings That Cascade Across Systems”</tspan><tspan class="cls-99"><tspan x="0" y="261.53">https://planetaklimata.com.ua/instr/Liebert_Hiross/Emerson_</tspan><tspan x="1933.39" y="261.53">-</tspan><tspan x="0" y="348.71">Network_Power_EnergyLogic_2012_Eng.pdf</tspan></tspan></text>
       <text class="cls-100" transform="translate(2669.78 1653.2)"><tspan xml:space="preserve">White paper of Emerson Network Power    2008.04</tspan></text>
       <circle class="cls-88" cx="2579.18" cy="1628.49" r="20.3"/>
     </g>
-    <g id="T0807_EVENT" data-name="T0807 EVENT">
+    <g id="event" class="event-hide" data-name="T0807 EVENT">
       <text class="cls-98" transform="translate(2647.14 1825.75)">Revolutionizing Data Center Energy Efficiency McKinsey&amp;Company<tspan class="cls-99"><tspan x="0" y="174.36">https://www.sallan.org/pdf-docs/McKinsey_Data_Center_Efficiency.pdf</tspan></tspan></text>
       <text class="cls-100" transform="translate(2642.71 1659.62)"><tspan xml:space="preserve">Report   2008.07</tspan></text>
       <circle class="cls-88" cx="2550.49" cy="1632.6" r="20.3"/>
     </g>
-    <g id="T0611">
+    <g id="event" class="event-hide">
       <text class="cls-101" transform="translate(2142.92 1646.74)"><tspan xml:space="preserve">HP   2006.11.29</tspan></text>
       <text class="cls-98" transform="translate(2137.02 1776.89)">Research contributed to the company&apos;s new<tspan x="0" y="87.18">Dynamic Smart Coolivng technology which can </tspan><tspan x="0" y="174.36">dramatically reduce data center energy costs </tspan><tspan class="cls-99"><tspan x="0" y="348.71">http://www.hpl.hp.com/news/2006/oct-dec/power.html</tspan></tspan></text>
       <circle class="cls-102" cx="2043.51" cy="1617.93" r="20.3"/>
     </g>
-    <g id="T0606">
+    <g id="event" class="event-hide">
       <text class="cls-98" transform="translate(1872.75 1950.76)"> <tspan x="0" y="87.18">Data Center and FacilitiesStrategy Services—data </tspan><tspan x="0" y="174.36">center energy efficiency assessment </tspan><tspan class="cls-99"><tspan x="0" y="348.71">https://www-935.ibm.com/services/multimedia/DC_energy_efficiency.pdf</tspan></tspan></text>
       <text class="cls-101" transform="translate(1872.75 1875.78)">IBM 2005.6.25</text>
       <circle class="cls-102" cx="1769.33" cy="1843.01" r="20.3"/>
     </g>
-    <g id="T0705">
+    <g id="event" class="event-hide">
       <text class="cls-101" transform="translate(2396.68 1656.93)"><tspan xml:space="preserve">IBM   2007.5.12</tspan></text>
       <text></text>
       <text class="cls-98" transform="translate(2396.68 1809.95)">On Thursday unveiled a US$1 billion-a-year<tspan x="0" y="87.18">service initiative aimed at building and redesigning </tspan><tspan x="0" y="174.36">data centers that consume less energy</tspan><tspan class="cls-99" x="0" y="348.71">https://www.pcworld.com/article/131777/article.html</tspan><tspan x="0" y="435.89"> </tspan></text>
       <circle class="cls-102" cx="2287.36" cy="1627.05" r="20.3"/>
     </g>
-    <g id="T0802">
+    <g id="event" class="event-hide">
       <text class="cls-101" transform="translate(2396.64 1592.2)"><tspan xml:space="preserve">DELL    2008.2.5</tspan></text>
       <text></text>
       <text class="cls-98" transform="translate(2390.74 1741.91)">By consolidating systems using virtualization <tspan x="0" y="87.18">and Dell “PowerEdge”Energy Smart servers </tspan><tspan x="0" y="174.36">organizations can retire legacy hardware to help </tspan><tspan x="0" y="261.53">significantly reduce power and cooling requirements </tspan><tspan x="0" y="348.71">and create a green data center</tspan><tspan class="cls-99" x="0" y="523.07">http://i.dell.com/sites/content/business/solutions/power/en/</tspan><tspan class="cls-99" x="0" y="610.24">Documents/Best_Practices_for_Increasing_Data_Center_Energy_Efficiency.pdf</tspan></text>
       <circle class="cls-102" cx="2287.32" cy="1562.11" r="20.3"/>
     </g>
-    <g id="T0804">
+    <g id="event" class="event-hide">
       <text class="cls-101" transform="translate(2659.91 1649.59)"><tspan xml:space="preserve">HITACHI  2008.4.22</tspan></text>
       <text></text>
       <text class="cls-98" transform="translate(2654.01 1795.67)">Reveals greenest data center dream<tspan class="cls-99" x="0" y="174.36">https://www.theregister.co.uk/2008/04/22/hitachi_greenest_data_center_evar/</tspan><tspan x="0" y="261.53"> </tspan></text>
       <circle class="cls-102" cx="2551.24" cy="1619.32" r="20.3"/>
     </g>
-    <g id="T0805">
+    <g id="event" class="event-hide">
       <text class="cls-101" transform="translate(2659.91 1642.39)"><tspan xml:space="preserve">IBM    2008.5.8</tspan></text>
       <text class="cls-98" transform="translate(2659.91 1783.34)">Creating a green data center to help <tspan x="0" y="87.18">reduce energy costs and gain a </tspan><tspan x="0" y="174.36">competitive advantage.</tspan><tspan class="cls-99"><tspan x="0" y="348.71">https://www-935.ibm.com/services/multimedia/GTW03020USEN_186553.pdf</tspan></tspan></text>
       <circle class="cls-102" cx="2550.59" cy="1615.16" r="20.3"/>
     </g>
-    <g id="T0808">
+    <g id="event" class="event-hide">
       <text class="cls-101" transform="translate(2654.01 1658.22)"><tspan xml:space="preserve">MICROSOFT   2008.8.28</tspan></text>
       <text class="cls-98" transform="translate(2659.91 1788.24)">Charging Customers for <tspan x="0" y="87.18">Power Usage in Microsoft Data Centers</tspan><tspan class="cls-99"><tspan x="0" y="261.53">https://blogs.msdn.microsoft.com/the_power_of_software/</tspan><tspan x="0" y="348.71">2008/08/28/charging-customers-for-power-usage-in-microsoft-data-centers/</tspan></tspan></text>
       <circle class="cls-102" cx="2550.59" cy="1630.99" r="20.3"/>
     </g>
-    <g id="T0809">
+    <g id="event" class="event-hide">
       <g id="_080908" data-name="080908">
         <text class="cls-101" transform="translate(2928.08 1124.26)"><tspan xml:space="preserve">GOOGLE   2008.9.8</tspan></text>
         <text class="cls-98" transform="translate(2928.08 1282.57)">Is pondering a floating data <tspan x="0" y="87.18">center that could be powered and cooled</tspan><tspan x="0" y="174.36">by the ocean</tspan><tspan class="cls-99"><tspan x="0" y="348.71">https://www.zdnet.com/article/google-makes</tspan><tspan x="0" y="435.89">-waves-and-may-have-solved-the-data-center</tspan><tspan x="0" y="523.07">-conundrum/</tspan></tspan></text>
@@ -792,32 +799,32 @@
         <circle class="cls-102" cx="4572.68" cy="1934.95" r="20.3"/>
       </g>
     </g>
-    <g id="T0810">
+    <g id="event" class="event-hide">
       <text class="cls-101" transform="translate(2653.37 1992.72)"><tspan xml:space="preserve">GOOGLE   2008.10.7</tspan></text>
       <text class="cls-98" transform="translate(2653.37 2148.77)">Setting the Bar on Data Center Efficiency<tspan class="cls-99"><tspan x="0" y="174.36">https://www.treehugger.com/clean-technology/</tspan><tspan x="0" y="261.53">google-setting-the-bar-on-data-center-efficiency.html</tspan></tspan></text>
       <circle class="cls-102" cx="2550.69" cy="1962.1" r="20.3"/>
     </g>
   </g>
-  <g id="redcircle">
-    <circle id="_0507_event" data-name="0507 event" class="cls-7" cx="1128.83" cy="3960.03" r="13.03"/>
-    <circle id="_0602_event" data-name="0602 event" class="cls-7" cx="1478.89" cy="3085.72" r="13.03"/>
-    <circle id="_0605_event" data-name="0605 event" class="cls-7" cx="1477.92" cy="3610.31" r="13.03"/>
-    <circle id="_0610_event" data-name="0610 event" class="cls-7" cx="1478.89" cy="4484.61" r="13.03"/>
-    <circle id="_0612_event" data-name="0612 event" class="cls-7" cx="1478.89" cy="4834.34" r="13.03"/>
-    <circle id="_0702_event" data-name="0702 event" class="cls-7" cx="1829.44" cy="3084.95" r="13.03"/>
-    <circle id="_0706_event" data-name="0706 event" class="cls-7" cx="1829.44" cy="3785.17" r="13.03"/>
-    <circle id="_0708_event" data-name="0708 event" class="cls-7" cx="1829.44" cy="4134.89" r="13.03"/>
-    <circle id="_0712_event" data-name="0712 event" class="cls-7" cx="1829.44" cy="4834.34" r="13.03"/>
-    <circle id="_0804_event" data-name="0804 event" class="cls-7" cx="2180" cy="3435.71" r="13.03"/>
-    <circle id="_0807_event" data-name="0807 event" class="cls-7" cx="2180" cy="3960.03" r="13.03"/>
-    <circle id="_0611_company" data-name="0611 company" class="cls-103" cx="1478.89" cy="4659.48" r="13.03"/>
-    <circle id="_0606_company" data-name="0606 company" class="cls-103" cx="1128.83" cy="3785.17" r="13.03"/>
-    <circle id="_0705_company" data-name="0705 company" class="cls-103" cx="1829.44" cy="3610.31" r="13.03"/>
-    <circle id="_0802_company" data-name="0802 company" class="cls-103" cx="2180" cy="3085.72" r="13.03"/>
-    <circle id="_0804_company" data-name="0804 company" class="cls-103" cx="2180" cy="3435.45" r="13.03"/>
-    <circle id="_0805_company" data-name="0805 company" class="cls-103" cx="2179.03" cy="3606.39" r="13.03"/>
-    <circle id="_0808_company" data-name="0808 company" class="cls-103" cx="2179.75" cy="4135.8" r="13.03"/>
-    <circle id="_0809_company" data-name="0809 company" class="cls-103" cx="2179.75" cy="4309.75" r="13.03"/>
-    <circle id="_0810_company" data-name="0810 company" class="cls-103" cx="2179.75" cy="4484.61" r="13.03"/>
+  <g id="redcircle-g">
+    <circle id="redcircle" data-name="0507 event" class="cls-7" cx="1128.83" cy="3960.03" r="13.03"/>
+    <circle id="redcircle" data-name="0602 event" class="cls-7" cx="1478.89" cy="3085.72" r="13.03"/>
+    <circle id="redcircle" data-name="0605 event" class="cls-7" cx="1477.92" cy="3610.31" r="13.03"/>
+    <circle id="redcircle" data-name="0610 event" class="cls-7" cx="1478.89" cy="4484.61" r="13.03"/>
+    <circle id="redcircle" data-name="0612 event" class="cls-7" cx="1478.89" cy="4834.34" r="13.03"/>
+    <circle id="redcircle" data-name="0702 event" class="cls-7" cx="1829.44" cy="3084.95" r="13.03"/>
+    <circle id="redcircle" data-name="0706 event" class="cls-7" cx="1829.44" cy="3785.17" r="13.03"/>
+    <circle id="redcircle" data-name="0708 event" class="cls-7" cx="1829.44" cy="4134.89" r="13.03"/>
+    <circle id="redcircle" data-name="0712 event" class="cls-7" cx="1829.44" cy="4834.34" r="13.03"/>
+    <circle id="redcircle" data-name="0804 event" class="cls-7" cx="2180" cy="3435.71" r="13.03"/>
+    <circle id="redcircle" data-name="0807 event" class="cls-7" cx="2180" cy="3960.03" r="13.03"/>
+    <circle id="redcircle" data-name="0611 company" class="cls-103" cx="1478.89" cy="4659.48" r="13.03"/>
+    <circle id="redcircle" data-name="0606 company" class="cls-103" cx="1128.83" cy="3785.17" r="13.03"/>
+    <circle id="redcircle" data-name="0705 company" class="cls-103" cx="1829.44" cy="3610.31" r="13.03"/>
+    <circle id="redcircle" data-name="0802 company" class="cls-103" cx="2180" cy="3085.72" r="13.03"/>
+    <circle id="redcircle" data-name="0804 company" class="cls-103" cx="2180" cy="3435.45" r="13.03"/>
+    <circle id="redcircle" data-name="0805 company" class="cls-103" cx="2179.03" cy="3606.39" r="13.03"/>
+    <circle id="redcircle" data-name="0808 company" class="cls-103" cx="2179.75" cy="4135.8" r="13.03"/>
+    <circle id="redcircle" data-name="0809 company" class="cls-103" cx="2179.75" cy="4309.75" r="13.03"/>
+    <circle id="redcircle" data-name="0810 company" class="cls-103" cx="2179.75" cy="4484.61" r="13.03"/>
   </g>
 </svg>
