--- a/_questions/visualizations/visualization02.html
+++ b/_questions/visualizations/visualization02.html
@@ -24,7 +24,7 @@
           stroke-width: 1.13px;
         }
       .textBold{
-        fill: red !important;
+        fill: #eb3e71 !important;
       }
         .cls-4 {
           stroke-dasharray: 11.14 22.29;
@@ -736,8 +736,7 @@
         <path id="circle1-3-1-4" data-name="circle1-3-1" class="cls-2" d="M2512.14,8859.26a37.81,37.81,0,1,1-37.81,37.81,37.81,37.81,0,0,1,37.81-37.81"/>
       </clipPath>
     </defs>
-    <title>002</title>
-
+ 
     <g id="linesecond">
       <rect class="cls-3" x="655.29" width="7284.91" height="11337.95"/>
       <g>
