--- a/research_map/research_map.html
+++ b/research_map/research_map.html
@@ -1,132 +1,2 @@
-<!-- Insert the code for your research map here -->
-<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 23.0.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="图层_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1136 773" style="enable-background:new 0 0 1136 773;" xml:space="preserve">
-  <style type="text/css">
-    .st0 {
-      fill: #0066FF;
-    }
 
-    .st1 {
-      font-family: 'AvenirNext-Medium';
-    }
-
-    .st2 {
-      font-size: 25px;
-    }
-
-    .st3 {
-      fill: none;
-      stroke: #0066FF;
-      stroke-width: 2;
-      stroke-miterlimit: 10;
-    }
-
-    .st4 {
-      fill: none;
-      stroke: #4D4D4D;
-      stroke-miterlimit: 10;
-    }
-
-    .st5 {
-      fill: #4D4D4D;
-    }
-
-    .st6 {
-      font-family: 'AvenirNext-Regular';
-    }
-
-    .st7 {
-      font-size: 16px;
-    }
-
-    .st8 {
-      font-size: 21.5px;
-    }
-
-    .st9 {
-      font-family: 'AdobeSongStd-Light-GBpc-EUC-H';
-    }
-
-    .st10 {
-      fill: none;
-      stroke: #666666;
-      stroke-miterlimit: 10;
-      stroke-dasharray: 5;
-    }
-  </style>
-  <g>
-    <text transform="matrix(1 0 0 1 364.6299 111.5137)" class="st0 st1 st2">RESEARCH ROADMAP</text>
-    <line class="st3" x1="346.43" y1="134.63" x2="645.56" y2="134.63" />
-  </g>
-  <line class="st3" x1="942.99" y1="256" x2="942.99" y2="362.19" />
-  <g>
-    <rect x="77.02" y="262.41" class="st4" width="362.71" height="93.14" />
-    <text transform="matrix(1 0 0 1 141.876 305.0688)">
-      <tspan x="0" y="0" class="st5 st6 st7">Which kind of sources are talking about</tspan>
-      <tspan x="0" y="19.2" class="st5 st6 st7">Data center energy?</tspan>
-    </text>
-    <text transform="matrix(1 0 0 1 104.7432 315.2661)" class="st0 st1 st8">1.</text>
-  </g>
-  <text transform="matrix(1 0 0 1 965.7354 305.0688)">
-    <tspan x="0" y="0" class="st0 st1 st7">TOPIC</tspan>
-    <tspan x="0" y="19.2" class="st0 st1 st7">DEFINITION</tspan>
-  </text>
-  <line class="st3" x1="942.99" y1="425" x2="942.99" y2="531.19" />
-  <text transform="matrix(1 0 0 1 965.7354 474.0688)">
-    <tspan x="0" y="0" class="st0 st1 st7">thematical</tspan>
-    <tspan x="0" y="19.2" class="st0 st1 st7">analysis</tspan>
-  </text>
-  <line class="st3" x1="942.99" y1="594" x2="942.99" y2="700.19" />
-  <text transform="matrix(1 0 0 1 965.7354 643.0688)">
-    <tspan x="0" y="0" class="st0 st1 st7">social</tspan>
-    <tspan x="0" y="19.2" class="st0 st1 st7">media</tspan>
-    <tspan x="0" y="38.4" class="st0 st1 st7">reaction</tspan>
-  </text>
-  <g>
-
-    <rect x="552.26" y="262.86" transform="matrix(-1 -4.489665e-11 4.489665e-11 -1 1467.2236 618.8591)" class="st4" width="362.71" height="93.14" />
-    <text transform="matrix(1 0 0 1 630.7354 305.0688)">
-      <tspan x="0" y="0" class="st5 st6 st7">What are the words in the sources </tspan>
-      <tspan x="0" y="19.2" class="st5 st6 st7">talking about Data center energy?</tspan>
-    </text>
-    <text transform="matrix(1 0 0 1 593.6035 317.0576)" class="st0 st1 st8">2.</text>
-  </g>
-  <rect x="77.02" y="431.41" class="st4" width="362.71" height="93.14" />
-  <text transform="matrix(1 0 0 1 141.876 464.0688)">
-    <tspan x="0" y="0" class="st5 st6 st7">What are the most related topics </tspan>
-    <tspan x="0" y="19.2" class="st5 st6 st7">between Energy conservation and </tspan>
-    <tspan x="0" y="38.4" class="st5 st6 st7">Data center?</tspan>
-  </text>
-  <text transform="matrix(1 0 0 1 104.7432 484.2661)" class="st0 st1 st8">3.</text>
-  <rect x="552.26" y="431.86" transform="matrix(-1 -4.489399e-11 4.489399e-11 -1 1467.2236 956.8591)" class="st4" width="362.71" height="93.14" />
-  <text transform="matrix(1 0 0 1 631.7354 464.0688)">
-    <tspan x="0" y="0" class="st5 st6 st7">When did people start to care </tspan>
-    <tspan x="0" y="19.2" class="st5 st6 st7">about green computing and </tspan>
-    <tspan x="0" y="38.4" class="st5 st6 st7">how was it evolved?</tspan>
-  </text>
-  <text transform="matrix(1 0 0 1 594.6035 486.0576)" class="st0 st1 st8">4.</text>
-  <g>
-    <rect x="77.02" y="600.41" class="st4" width="362.71" height="93.14" />
-    <text transform="matrix(1 0 0 1 141.876 633.0688)">
-      <tspan x="0" y="0" class="st5 st6 st7">How is the impression when talking</tspan>
-      <tspan x="0" y="19.2" class="st5 st6 st7">about Data center and energy through</tspan>
-      <tspan x="0" y="38.4" class="st5 st6 st7">the news media in U</tspan>
-      <tspan x="147.71" y="38.4" class="st5 st9 st7">.</tspan>
-      <tspan x="151.52" y="38.4" class="st5 st6 st7">S. and CHINA?</tspan>
-    </text>
-    <text transform="matrix(1 0 0 1 104.7432 653.2661)" class="st0 st1 st8">5.</text>
-  </g>
-  <rect x="552.26" y="600.86" transform="matrix(-1 -4.489399e-11 4.489399e-11 -1 1467.2236 1294.8591)" class="st4" width="362.71" height="93.14" />
-  <text transform="matrix(1 0 0 1 630.7354 633.0688)">
-    <tspan x="0" y="0" class="st5 st6 st7">What is the attitude of the public </tspan>
-    <tspan x="0" y="19.2" class="st5 st6 st7">towards Data center energy </tspan>
-    <tspan x="0" y="38.4" class="st5 st6 st7">on YOUTUBE?</tspan>
-  </text>
-  <text transform="matrix(1 0 0 1 593.6035 655.0576)" class="st0 st1 st8">6.</text>
-  <line class="st10" x1="439.73" y1="308.98" x2="552.26" y2="308.98" />
-  <line class="st10" x1="439.5" y1="477.98" x2="552.26" y2="477.98" />
-  <line class="st10" x1="439.73" y1="647.43" x2="552.26" y2="647.43" />
-  <line class="st10" x1="552.5" y1="355.5" x2="439.5" y2="431.5" />
-  <line class="st10" x1="552.5" y1="524.5" x2="439.5" y2="600.5" />
-</svg>
+<img src="{{ '/assets/images/covers/researchmap.png' | relative_url }}" alt="Responsive image" >
