--- a/_questions/visualizations/visualization01.html
+++ b/_questions/visualizations/visualization01.html
@@ -1,6 +1,11 @@
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="0 0 8261.18 7282.39">
   <defs>
     <style>
+
+      #textscale:hover{
+        border:solid 2px,#ffffff;
+      }
+
       .cls-1, .cls-10, .cls-101, .cls-123, .cls-124, .cls-128, .cls-133, .cls-134, .cls-136, .cls-137, .cls-2, .cls-3, .cls-5, .cls-50, .cls-59, .cls-62, .cls-63, .cls-68, .cls-70, .cls-71 {
         fill: none;
       }
@@ -20,7 +25,7 @@
       .cls-123, .cls-124, .cls-3, .cls-59 {
         stroke: #272628;
       }
-      
+
     .visfirst5 {
       fill: #000;
       visibility: hidden;
@@ -245,11 +250,15 @@
       }
 
       .cls-114, .cls-130, .cls-51, .cls-52, .cls-97 {
-        font-family: Avenir-Medium, Avenir;
+        font-family:  NotoSansCJKsc-Regular-GBpc-EUC-H, Noto Sans CJK SC;
       }
 
       .cls-52 {
-        font-size: 56px;
+        font-size: 68px;
+      }
+
+      m:hover{
+        font-size: 90px;
       }
 
       .cls-53 {
@@ -757,7 +766,7 @@
       }
       .cls-181 :hover {
          border: 5px solid red;
-        
+
       }
     </style>
     <clipPath id="clip-path" transform="translate(655.29 0)">
@@ -1767,23 +1776,23 @@
         <circle class="cls-6" cx="7358.81" cy="5526.54" r="4.51"/>
       </g>
       <text class="cls-51" transform="translate(2323.46 3854.17)">14</text>
-      <text class="cls-52" transform="translate(2212.92 3638.17)">COM<tspan class="cls-53" x="136.75" y="0">P</tspan><tspan class="cls-54" x="165.81" y="0">ANY</tspan><tspan x="80.36" y="67.2">WEB</tspan></text>
-      <text class="cls-51" transform="translate(2969.32 3854.17)">14</text>
-      <text class="cls-52" transform="translate(2812.83 3638.17)">D<tspan class="cls-55" x="41.5" y="0">AT</tspan><tspan x="102.76" y="0">A CENTER</tspan><tspan x="126.59" y="67.2">WEB</tspan></text>
+      <text id="textscale" class="cls-52" transform="translate(2190.92 3638.17)">COMPANY<tspan x="80.36" y="67.2">WEB</tspan></text>
+      <text class="cls-51" transform="translate(2967.32 3854.17)">14</text>
+      <text id="textscale" class="cls-52" transform="translate(2794.83 3638.17)">DATA CENTER<tspan x="126.59" y="67.2">WEB</tspan></text>
       <text class="cls-51" transform="translate(3607.74 3854.17)">8</text>
-      <text class="cls-52" transform="translate(3445.81 3638.17)">REFERRENCE</text>
+      <text id="textscale" class="cls-52" transform="translate(3423.81 3638.17)">REFERRENCE</text>
       <text class="cls-51" transform="translate(4230.27 3854.17)">5</text>
-      <text class="cls-52" transform="translate(4068.39 3638.17)">GOVERMENT</text>
+      <text id="textscale" class="cls-52" transform="translate(4046.39 3638.17)">GOVERMENT</text>
       <text class="cls-51" transform="translate(4852.8 3854.17)">4</text>
-      <text class="cls-52" transform="translate(4688.29 3638.17)">NEWS MEDIA</text>
+      <text id="textscale" class="cls-52" transform="translate(4773.29 3638.17)">NEWS<tspan x="-10" y="67.2">MEDIA</tspan></text>
       <text class="cls-51" transform="translate(5475.33 3854.17)">2</text>
-      <text class="cls-52" transform="translate(5315.89 3638.17)">CHARI<tspan class="cls-55" x="170.13" y="0">T</tspan><tspan class="cls-56" x="197.12" y="0">ABLE </tspan><tspan x="-39.81" y="67.2">ORGANIZ</tspan><tspan class="cls-57" x="217.33" y="67.2">A</tspan><tspan class="cls-56" x="251.61" y="67.2">TION</tspan></text>
+      <text id="textscale" class="cls-52" transform="translate(5300.89 3638.17)"> CHARIABLE<tspan x="-39.81" y="67.2">ORGANIZATION</tspan></text>
       <text class="cls-51" transform="translate(6097.86 3854.17)">1</text>
-      <text class="cls-52" transform="translate(5949.9 3638.17)">EDUC<tspan class="cls-58" x="154.56" y="0">A</tspan><tspan x="188.83" y="0">TION</tspan></text>
+      <text id="textscale" class="cls-52" transform="translate(5927.9 3638.17)">EDUCATION</text>
       <text class="cls-51" transform="translate(6720.39 3854.17)">1</text>
-      <text class="cls-52" transform="translate(6634.73 3638.17)">FORUM</text>
+      <text id="textscale" class="cls-52" transform="translate(6622.73 3638.17)">FORUM</text>
       <text class="cls-51" transform="translate(7342.92 3854.17)">1</text>
-      <text class="cls-52" transform="translate(7258.21 3638.17)">SOCIAL<tspan x="9.88" y="67.2">MEDIA</tspan></text>
+      <text id="textscale" class="cls-52" transform="translate(7246.21 3638.17)">SOCIAL<tspan x="9.88" y="67.2">MEDIA</tspan></text>
       <path class="cls-59" d="M3775.46,4035.11a20.9,20.9,0,0,1-20.9,20.9H3427.18a20.9,20.9,0,0,1-20.9-20.9" transform="translate(655.29 0)"/>
       <path class="cls-59" d="M1884.54,4035.11a20.9,20.9,0,0,1-20.9,20.9H1536.26a20.9,20.9,0,0,1-20.9-20.9" transform="translate(655.29 0)"/>
       <path class="cls-59" d="M2530.4,4035.11a20.9,20.9,0,0,1-20.9,20.9H2182.12a20.9,20.9,0,0,1-20.9-20.9" transform="translate(655.29 0)"/>
@@ -2946,7 +2955,7 @@
       <text class="cls-114" transform="translate(873.8 4313.51)">ENGLISH WEBSITE</text>
       <text class="cls-115" transform="translate(1289.41 3189.14) scale(1.1 1)"><tspan xml:space="preserve">  E</tspan><tspan class="cls-119" x="51.34" y="0">A</tspan><tspan x="78.08" y="0">CH </tspan><tspan x="0" y="46.11" xml:space="preserve">  RE</tspan><tspan class="cls-120" x="79.58" y="46.11">C</tspan><tspan class="cls-121" x="107.17" y="46.11">T</tspan><tspan x="132.3" y="46.11">ANGEL </tspan><tspan x="0" y="92.22" xml:space="preserve">  MEANS ONE </tspan><tspan x="0" y="138.33" xml:space="preserve">  WE</tspan><tspan class="cls-116" x="88.92" y="138.33">B</tspan><tspan class="cls-117" x="117.43" y="138.33">SITE</tspan></text>
       <text class="cls-122" transform="translate(924.71 3624.15) scale(1.1 1)">TO<tspan class="cls-121" x="57.14" y="0">T</tspan><tspan class="cls-104" x="82.27" y="0">AL </tspan><tspan class="cls-107" x="146.55" y="0">C</tspan><tspan class="cls-104" x="173.68" y="0">OUNT</tspan></text>
-      <text class="cls-52" transform="translate(966.89 3452.45)">WEBSITE<tspan x="51.3" y="67.2">TYPE</tspan></text>
+      <text class="cls-52" transform="translate(945 3452.45)">WEBSITE<tspan x="51.3" y="67.2">TYPE</tspan></text>
       <path class="cls-123" d="M610.82,3293.18a23.59,23.59,0,0,0-23.59-23.59H273a23.59,23.59,0,0,0-23.59,23.59" transform="translate(655.29 0)"/>
       <path class="cls-123" d="M610.82,3748.23a23.59,23.59,0,0,1-23.59,23.59H273a23.59,23.59,0,0,1-23.59-23.59" transform="translate(655.29 0)"/>
       <line class="cls-124" x1="1085.41" y1="3269.59" x2="1085.41" y2="2973"/>
