--- a/_questions/visualizations/visualization05.html
+++ b/_questions/visualizations/visualization05.html
@@ -532,7 +532,7 @@
       <text class="cls-4" transform="translate(1351.46 694.16)">News<tspan class="cls-10" x="119.07" y="0"> </tspan><tspan class="cls-11" x="129.58" y="0">T</tspan><tspan class="cls-12" x="151.56" y="0">opic</tspan></text>
       <text class="cls-4" transform="translate(2784.4 694.16)">News<tspan class="cls-13" x="119.07" y="0"> </tspan><tspan class="cls-11" x="129.58" y="0">T</tspan><tspan x="151.56" y="0">opic</tspan></text>
       <text class="cls-4" transform="translate(2040.18 694.16)">News<tspan class="cls-14" x="119.07" y="0"> </tspan><tspan x="129.86" y="0">A</tspan><tspan class="cls-15" x="162.9" y="0">t</tspan><tspan x="177.5" y="0">titude</tspan></text>
-      <text class="cls-16" transform="translate(2069.38 2004.32) scale(0.92 1)">NETURA<tspan class="cls-17" x="239.57" y="0">L</tspan></text>
+      <text class="cls-16" transform="translate(2069.38 2004.32) scale(0.92 1)">NETURAL</text>
       <text class="cls-16" transform="translate(2068.89 1169.95) scale(0.92 1)">POSITIVE</text>
       <text class="cls-18" transform="translate(2069.85 2363.65) scale(0.92 1)">NEG<tspan class="cls-19" x="117.28" y="0">A</tspan><tspan x="152.96" y="0">TIVE</tspan></text>
       <text class="cls-20" transform="translate(747.54 2397.37) scale(0.91 1)">Supplier</text>
